# codex-memory-weaver

./: .env.example  .gitignore  README.md  env-example.md  hippocampai-mcp-server.py  pyproject.toml  requirements.txt
docs/: codex-config-examples.md
docs/plans/: 2026-02-17-memory-management-mcp-implementation-plan.md
scripts/: smoke_test_mcp.py
src/hippocampai_mcp/: __init__.py  server.py
src/hippocampai_mcp/domain/: __init__.py  models.py  typing.py  validation.py
src/hippocampai_mcp/services/: __init__.py  access_control.py  memory_service.py
src/hippocampai_mcp/storage/: __init__.py  base.py  hippocampai_adapter.py
src/hippocampai_mcp/telemetry/: __init__.py  logging.py
tests/domain/: test_scope_validation.py
tests/integration/: test_mcp_tool_flows.py
tests/services/: test_access_control.py  test_memory_service_scopes.py
tests/storage/: test_hippocampai_adapter_mapping.py  test_hippocampai_adapter_strict_signatures.py
